4828 Implement DynamoDBQueryTrackerV2.getFailedQueries